test_suite/tests/ui/identifier/newtype_not_last.stderr
error: `Other` must be the last variant
 --> $DIR/newtype_not_last.rs:8:5
  |
8 |     Other(String),
  |     ^^^^^^^^^^^^^

error: aborting due to previous error

